feat: add cdn pricing

--- a/src/app/i18n/locales/en-US/quotation.json
+++ b/src/app/i18n/locales/en-US/quotation.json
@@ -16,6 +16,7 @@
     "storage.space": "Storage Space",
     "ai.points": "AI Points",
     "base.cost": "Pricing",
+    "per.month": "/month",
     "advanced.modules": "Enterprise Modules",
     "merge.to.basic": "Merge to basic quote",
     "merge.cancel.to.basic": "Cancel merge quote",
@@ -110,6 +111,8 @@
     "expansion.downloadData.desc": "Download data package (valid until consumed)",
     "expansion.GA": "Overseas Acceleration Data",
     "expansion.GA.desc": "CDN/OSS acceleration package: 10TB per package (valid until consumed)",
+    "expansion.CDN": "CDN Traffic Expansion",
+    "expansion.CDN.desc": "CDN traffic package (valid until consumed)",
     "expansion.points": " points",
     "form.required": "Please check the required information",
     "contact.email": "Email",
@@ -121,6 +124,7 @@
     "sso.wecom": "WeCom",
     "sso.dingtalk": "DingTalk",
     "ai.autoTag.hint": "Basic annual module fee + pay-as-you-go computing power points package model",
+    "publicAssetsAndDerivatives.hint": "Monthly CDN traffic follows storage capacity",
     "ai.autoTag.points.hint": "One-time permanent points, flexible top-up when consumed within validity period",
     "ai.autoTag.points.tag": "100,000 points",
     "ai.museAI.points.hint": "One-time permanent points, flexible top-up when consumed within validity period",
