--- a/src/app/i18n/locales/zh-CN/quotation.json
+++ b/src/app/i18n/locales/zh-CN/quotation.json
@@ -33,6 +33,7 @@
     "basic.memberSeats.des.global": "$300/席/年 ($25/席/年)",
     "memberSeats.perYear": "/席/年",
     "memberSeats.perMonth": "/席/月",
+    "per.month": "/月",
     "basic.storageSpace.hint": "每月下载流量跟随存储容量",
     "basic.storageSpace.des": "￥5,000/TB/年（￥418/TB/月）",
     "aiPoints.hint": "一次性永久 AI 点数包 10 万点/份",
@@ -110,6 +111,8 @@
     "expansion.downloadData.desc": "下载流量包 1TB/份（有效期至消耗完为止）",
     "expansion.GA": "海外加速流量",
     "expansion.GA.desc": "CDN/OSS 加速流量包 10TB/份（消耗完为止）",
+    "expansion.CDN": "CDN 流量扩充",
+    "expansion.CDN.desc": "CDN 流量包 1TB/份（有效期至消耗完为止）",
     "expansion.points": " 点",
     "form.required": "请填写必填信息",
     "contact.email": "邮箱",
@@ -121,6 +124,7 @@
     "sso.wecom": "企业微信",
     "sso.dingtalk": "钉钉",
     "ai.autoTag.hint": "采用基础年度模块费+ 按量计费的算力点数包模式",
+    "publicAssetsAndDerivatives.hint": "每月 CDN 流量跟随存储容量",
     "ai.autoTag.points.hint": "一次性永久点数，有效期内消耗完毕可灵活增购",
     "ai.autoTag.points.tag": "10万点",
     "ai.museAI.points.hint": "一次性永久点数，有效期内消耗完毕可灵活增购",
