feat: update pricing

--- a/src/app/i18n/locales/en-US/pricing-enterprise-features.json
+++ b/src/app/i18n/locales/en-US/pricing-enterprise-features.json
@@ -214,6 +214,15 @@
     "deliveryApprovalCenter.4.detail": "Set delivery and approval deadlines with automatic escalation to designated approvers for overdue tasks, ensuring on-time project completion",
     "deliveryApprovalCenter.5.name": "Automated Asset Archiving",
     "deliveryApprovalCenter.5.detail": "Automatically file approved deliverables to designated folders, enabling seamless transition from approval to archival",
+    "smartFolders.title": "Smart Folders",
+    "smartFolders.0.name": "Conditional Auto-Classification",
+    "smartFolders.0.detail": "Admins create smart folders based on filter criteria. The system automatically populates and continuously updates matching assets, with one-time configuration for ongoing benefits.",
+    "smartFolders.1.name": "Intelligent Permission Filtering",
+    "smartFolders.1.detail": "Members accessing smart folders only see assets they have permission to view, with permissions inherited from shared folder collaborator settings.",
+    "smartFolders.2.name": "Visibility Access Control",
+    "smartFolders.2.detail": "Workspace admins control whether smart folders are visible to workspace members, providing flexible management of folder entry display.",
+    "smartFolders.3.name": "External Sharing Support",
+    "smartFolders.3.detail": "Admins configure external sharing permissions for smart folders, enabling cross-organization collaboration and content distribution.",
     "publicAssetsAndDerivatives.title": "Public Assets & Derivatives",
     "publicAssetsAndDerivatives.0.name": "Original File Public Permission Control",
     "publicAssetsAndDerivatives.0.detail": "Folder-level permission settings enable administrators to control public access to original files at the source, ensuring sensitive content is not inadvertently exposed",
@@ -223,6 +232,17 @@
     "publicAssetsAndDerivatives.2.detail": "Configure whether derivatives and their public links are displayed on asset detail pages to meet different business visibility requirements",
     "publicAssetsAndDerivatives.3.name": "Batch Link Export",
     "publicAssetsAndDerivatives.3.detail": "Batch select assets and export public links for original files and derivatives to CSV in one click, streamlining workflows for e-commerce product listing and similar scenarios",
+    "publicAssetsAndDerivatives.4.name": "Included CDN Traffic",
+    "publicAssetsAndDerivatives.4.detail": "300GB monthly CDN traffic quota with automatic monthly reset; additional traffic packages or global CDN acceleration for enhanced overseas performance available for purchase as needed",
+    "dat.title": "Dynamic Asset Transformation",
+    "dat.0.name": "Real-Time URL Parameter Transformations",
+    "dat.0.detail": "Add parameters (format, dimensions, crop, etc.) directly to public URLs to generate derivatives on-the-fly, supporting JPEG/PNG/WebP/TIFF conversions without pre-rendering to meet multi-channel distribution needs",
+    "dat.1.name": "On-Demand Preview and Download",
+    "dat.1.detail": "Transformed assets can be previewed in-browser or downloaded via URL parameters without saving to the asset library, enabling temporary usage, testing validation, and external delivery workflows",
+    "dat.2.name": "Reusable Transformation Presets",
+    "dat.2.detail": "Create and apply predefined DAT transformation templates with one-click batch application, ensuring brand consistency and workflow efficiency at scale",
+    "dat.3.name": "API Integration and Access Control",
+    "dat.3.detail": "Enable DAT transformation calls and batch processing through API, secure restricted asset access with OAuth2 token authentication, optionally paired with global CDN acceleration for optimized content delivery",
     "copyrightManagement.title": "Rights Management",
     "copyrightManagement.0.name": "Rights Agreement Management",
     "copyrightManagement.0.detail": "Dedicated rights management module supporting the creation of rights agreements, uploading of agreement attachments, configuring multi-dimensional usage rights (region, channel, time period), and linking assets from the library for centralized management",
