--- a/src/app/i18n/locales/en-US/quotation.json
+++ b/src/app/i18n/locales/en-US/quotation.json
@@ -110,8 +110,8 @@
     "expansion.downloadData": "Download Data",
     "expansion.downloadData.desc": "Download data package (valid until consumed)",
     "expansion.GA": "Overseas Acceleration Data",
-    "expansion.GA.desc": "CDN/OSS acceleration package: 10TB per package (valid until consumed)",
-    "expansion.CDN": "CDN Traffic Expansion",
+    "expansion.GA.desc": "CDN/OSS acceleration package: 1TB per package (valid until consumed)",
+    "expansion.CDN": "CDN Traffic",
     "expansion.CDN.desc": "CDN traffic package (valid until consumed)",
     "expansion.points": " points",
     "form.required": "Please check the required information",
@@ -120,11 +120,14 @@
     "module.aiAutoTagModule": "Module Subscription Fee",
     "module.aiAutoTagPoints": "AI Points Package",
     "module.ga": "Overseas Acceleration",
+    "module.cdnTraffic": "CDN Traffic Package",
+    "module.smartFolders": "Smart Folders",
+    "module.dat": "Dynamic Asset Transformation",
     "sso.feishu": "Feishu",
     "sso.wecom": "WeCom",
     "sso.dingtalk": "DingTalk",
     "ai.autoTag.hint": "Basic annual module fee + pay-as-you-go computing power points package model",
-    "publicAssetsAndDerivatives.hint": "Monthly CDN traffic follows storage capacity",
+    "publicAssetsAndDerivatives.hint": "300GB monthly CDN traffic included",
     "ai.autoTag.points.hint": "One-time permanent points, flexible top-up when consumed within validity period",
     "ai.autoTag.points.tag": "100,000 points",
     "ai.museAI.points.hint": "One-time permanent points, flexible top-up when consumed within validity period",
@@ -132,6 +135,7 @@
     "ai.museCut.points.hint": "One-time permanent points, flexible top-up when consumed within validity period",
     "ga.hint": "Overseas acceleration data package, flexible top-up when consumed within validity period",
     "ga.unit": "/10T/year",
+    "cdnTraffic.hint": "CDN traffic package, flexible top-up when consumed within validity period",
     "sso.unit": "/channel/year",
     "ai.AutoTagEngine.unit": "package",
     "ai.AutoTagEngine.unit.s": "s",
