--- a/src/app/i18n/locales/zh-CN/pricing-enterprise-features.json
+++ b/src/app/i18n/locales/zh-CN/pricing-enterprise-features.json
@@ -216,7 +216,16 @@
     "deliveryApprovalCenter.4.detail": "支持设置交付截止和审批截止时间，超时任务自动转交指定审批人，确保项目按时完成",
     "deliveryApprovalCenter.5.name": "自动资产入库",
     "deliveryApprovalCenter.5.detail": "审批通过的交付物可自动归档至指定文件夹，实现审批到归档的无缝衔接",
-    "publicAssetsAndDerivatives.title": "公开资产与衍生版本",
+    "smartFolders.title": "智能文件夹",
+    "smartFolders.0.name": "条件化自动归类",
+    "smartFolders.0.detail": "管理员创建基于筛选条件的智能文件夹，系统自动将符合条件的资产归入其中并实时更新，一次配置持续生效",
+    "smartFolders.1.name": "智能权限过滤",
+    "smartFolders.1.detail": "成员访问智能文件夹时，仅能查看自己有权限访问的资产，权限继承自共享文件夹的协作者设置",
+    "smartFolders.2.name": "可见性权限管控",
+    "smartFolders.2.detail": "企业空间管理员可设置智能文件夹是否对空间成员可见，灵活控制文件夹入口的展示范围",
+    "smartFolders.3.name": "对外分享支持",
+    "smartFolders.3.detail": "管理员可为智能文件夹配置对外分享权限，便于跨组织协作和内容分发",
+    "publicAssetsAndDerivatives.title": "公开链接与衍生版本",
     "publicAssetsAndDerivatives.0.name": "原文件公开权限管控",
     "publicAssetsAndDerivatives.0.detail": "文件夹级权限设置，管理员从源头控制原文件的对外开放范围，确保敏感内容不被意外公开",
     "publicAssetsAndDerivatives.1.name": "衍生版本自动化配置",
@@ -225,6 +234,17 @@
     "publicAssetsAndDerivatives.2.detail": "支持设置衍生版本及其公开链接是否在资产详情页展示，满足不同业务场景的可见性需求",
     "publicAssetsAndDerivatives.3.name": "批量链接导出",
     "publicAssetsAndDerivatives.3.detail": "支持批量选择资产，一键导出原始文件及各衍生版本的公开链接至 CSV 文件，提升电商上品等场景的操作效率",
+    "publicAssetsAndDerivatives.4.name": "内置 CDN 流量",
+    "publicAssetsAndDerivatives.4.detail": "每月赠送 300GB CDN 流量并按月自动重置，可按需购买流量包扩容或全球 CDN 加速包提升海外访问速度",
+    "dat.title": "DAT 动态资产转换",
+    "dat.0.name": "URL 参数化实时转换",
+    "dat.0.detail": "在公开链接后添加参数（格式、尺寸、裁剪等）实时生成衍生版本，支持 JPEG/PNG/WebP/TIFF 等格式转换，无需预生成即可满足多渠道分发需求",
+    "dat.1.name": "即用即取灵活输出",
+    "dat.1.detail": "转换后的资产可直接预览或通过 URL 参数触发下载，无需保存到资产库，支持临时使用、测试验证、对外交付等场景",
+    "dat.2.name": "预设模板标准化管理",
+    "dat.2.detail": "创建可复用的 DAT 转换预设模板，支持预设一键批量应用，确保品牌视觉规范统一性和工作效率提升",
+    "dat.3.name": "API 集成与全球分发",
+    "dat.3.detail": "提供 API 支持 DAT 转换调用和批量处理，基于 OAuth2 令牌认证保护受限资产访问，可配合全球 CDN 加速包实现快速分发",
     "copyrightManagement.title": "版权管理",
     "copyrightManagement.0.name": "版权协议管理",
     "copyrightManagement.0.detail": "提供专门的版权管理模块，支持创建版权协议、上传协议附件、设置多个多维度授权范围（地区、渠道、授权时间），并关联素材库中的素材进行统一管理",
