--- a/src/app/i18n/locales/zh-CN/quotation.json
+++ b/src/app/i18n/locales/zh-CN/quotation.json
@@ -77,7 +77,7 @@
     "module.complianceCheck": "合规检测",
     "module.batchTemplating": "批量套版",
     "module.deliveryApprovalCenter": "交付审批中心",
-    "module.publicAssetsAndDerivatives": "公开资产与衍生版本",
+    "module.publicAssetsAndDerivatives": "公开链接与衍生版本",
     "module.copyrightManagement": "版权管理",
     "module.customMetadataFields": "元数据自定义字段",
     "module.watermark": "水印",
@@ -110,8 +110,8 @@
     "expansion.downloadData": "下载流量",
     "expansion.downloadData.desc": "下载流量包 1TB/份（有效期至消耗完为止）",
     "expansion.GA": "海外加速流量",
-    "expansion.GA.desc": "CDN/OSS 加速流量包 10TB/份（消耗完为止）",
-    "expansion.CDN": "CDN 流量扩充",
+    "expansion.GA.desc": "CDN/OSS 加速流量包 1TB/份（消耗完为止）",
+    "expansion.CDN": "CDN 流量",
     "expansion.CDN.desc": "CDN 流量包 1TB/份（有效期至消耗完为止）",
     "expansion.points": " 点",
     "form.required": "请填写必填信息",
@@ -120,11 +120,14 @@
     "module.aiAutoTagModule": "模块订阅费",
     "module.aiAutoTagPoints": "AI 点数包",
     "module.ga": "海外加速",
+    "module.cdnTraffic": "CDN 流量包",
+    "module.smartFolders": "智能文件夹",
+    "module.dat": "DAT 动态资产转换",
     "sso.feishu": "飞书",
     "sso.wecom": "企业微信",
     "sso.dingtalk": "钉钉",
     "ai.autoTag.hint": "采用基础年度模块费+ 按量计费的算力点数包模式",
-    "publicAssetsAndDerivatives.hint": "每月 CDN 流量跟随存储容量",
+    "publicAssetsAndDerivatives.hint": "每月赠送 CDN 流量 300GB",
     "ai.autoTag.points.hint": "一次性永久点数，有效期内消耗完毕可灵活增购",
     "ai.autoTag.points.tag": "10万点",
     "ai.museAI.points.hint": "一次性永久点数，有效期内消耗完毕可灵活增购",
@@ -132,6 +135,7 @@
     "ai.museCut.points.hint": "一次性永久点数，有效期内消耗完毕可灵活增购",
     "ga.hint": "海外加速流量包，有效期内消耗完毕可灵活增购",
     "ga.unit": "/10T/年",
+    "cdnTraffic.hint": "CDN 流量包，有效期内消耗完毕可灵活增购",
     "sso.unit": "/渠道/年",
     "ai.AutoTagEngine.unit": "份",
     "ai.AutoTagEngine.unit.s": "",
