--- a/src/app/i18n/locales/zh-CN/quotation.json
+++ b/src/app/i18n/locales/zh-CN/quotation.json
@@ -106,11 +106,11 @@
     "expansion.storageSpace": "存储空间",
     "expansion.storageSpace.desc": "每月下载流量跟随存储容量",
     "expansion.aiPoints": "AI 点数",
-    "expansion.aiPoints.desc": "一次性永久 AI 点数包 10 万点/份，有效期消耗完为止；AI 点数可用于自定义 AI 标签、智能解析和 AI 内容创作等",
+    "expansion.aiPoints.desc": "一次性永久 AI 点数包 10 万点/份，有效期至消耗完为止；AI 点数可用于自定义 AI 标签、智能解析和 AI 内容创作等",
     "expansion.downloadData": "下载流量",
     "expansion.downloadData.desc": "下载流量包 1TB/份（有效期至消耗完为止）",
     "expansion.GA": "海外加速流量",
-    "expansion.GA.desc": "CDN/OSS 加速流量包 1TB/份（消耗完为止）",
+    "expansion.GA.desc": "CDN/OSS 加速流量包 1TB/份（有效期至消耗完为止）",
     "expansion.CDN": "CDN 流量",
     "expansion.CDN.desc": "CDN 流量包 1TB/份（有效期至消耗完为止）",
     "expansion.points": " 点",
