--- a/src/app/i18n/locales/en-US/quotation.json
+++ b/src/app/i18n/locales/en-US/quotation.json
@@ -71,7 +71,7 @@
     "module.complianceCheck": "Compliance Check",
     "module.batchTemplating": "Batch Templating",
     "module.deliveryApprovalCenter": "Deliverable Approval Center",
-    "module.publicAssetsAndDerivatives": "Public Assets & Derivatives",
+    "module.publicAssetsAndDerivatives": "Public Urls & Derivatives",
     "module.copyrightManagement": "Rights Management",
     "module.customMetadataFields": "Custom Metadata Fields",
     "module.watermark": "Watermark",
