--- a/src/app/i18n/locales/en-US/pricing-enterprise-features.json
+++ b/src/app/i18n/locales/en-US/pricing-enterprise-features.json
@@ -276,10 +276,20 @@
     "enterpriseSingleSignOn.3.name": "Teams SSO",
     "enterpriseSingleSignOn.3.detail": "Single sign-on integration and authentication via Microsoft Teams",
     "globalAcceleration.title": "Global Acceleration",
-    "globalAcceleration.0.name": "Global Team Collaboration Support",
-    "globalAcceleration.0.detail": "Ensures overseas team members can access the system seamlessly, enabling barrier-free cross-regional collaboration",
-    "globalAcceleration.1.name": "High-Performance Network Services",
-    "globalAcceleration.1.detail": "Provides overseas CDN/OSS acceleration traffic package quotas, guaranteeing access speed and stability for global users",
+    "globalAcceleration.block.0": "CDN/OSS Global Public Network Acceleration",
+    "globalAcceleration.0.name": "Global Node Coverage",
+    "globalAcceleration.0.detail": "Worldwide CDN network ensures seamless system access for overseas teams, enabling barrier-free cross-regional collaboration",
+    "globalAcceleration.1.name": "Intelligent Distribution",
+    "globalAcceleration.1.detail": "Handles file downloads, previews, and regular-sized uploads, significantly improving global access speed and stability",
+    "globalAcceleration.2.name": "Cost-Effective Solution",
+    "globalAcceleration.2.detail": "Provides overseas CDN/OSS traffic packages for high-performance network services at optimized costs",
+    "globalAcceleration.block.1": "GA Global Dedicated Line Acceleration",
+    "globalAcceleration.3.name": "Cross-Border Dedicated Line",
+    "globalAcceleration.3.detail": "Enterprise-grade stable transmission channels for cross-border collaboration via global accelerator network",
+    "globalAcceleration.4.name": "Large File Upload Guarantee",
+    "globalAcceleration.4.detail": "Optimized for overseas large file uploads, resolving cross-border network instability issues",
+    "globalAcceleration.5.name": "Combined Solution",
+    "globalAcceleration.5.detail": "Requires CDN/OSS package as foundation, building complete \"CDN read + GA upload\" global acceleration solution",
     "customerService.title": "Ticketing Support",
     "customerService.0.name": "Ticketing Support",
     "customerService.0.detail": "Dedicated ticketing system with guaranteed 1-2 business day response times",
