--- a/src/app/i18n/locales/en-US/quotation.json
+++ b/src/app/i18n/locales/en-US/quotation.json
@@ -109,8 +109,11 @@
     "expansion.aiPoints.desc": "Permanent AI points package: 100,000 points per package, valid until consumed; For custom AI tagging, intelligent parsing, AI content creation, etc.",
     "expansion.downloadData": "Download Data",
     "expansion.downloadData.desc": "Download data package (valid until consumed)",
-    "expansion.GA": "Overseas Acceleration Data",
-    "expansion.GA.desc": "CDN/OSS acceleration package: 1TB per package (valid until consumed)",
+    "expansion.GA": "Overseas Acceleration Traffic Expansion",
+    "expansion.GA.cdnOss": "CDN/OSS Global Public Network Acceleration Traffic Package",
+    "expansion.GA.cdnOss.desc": "CDN/OSS Global Public Network Acceleration Traffic Package 1TB/unit (valid until consumed)",
+    "expansion.GA.dedicatedLine": "GA Global Dedicated Line Upload Acceleration Traffic Package",
+    "expansion.GA.dedicatedLine.desc": "GA Global Dedicated Line Upload Acceleration Traffic Package 1TB/unit (valid until consumed)",
     "expansion.CDN": "CDN Traffic",
     "expansion.CDN.desc": "CDN traffic package (valid until consumed)",
     "expansion.points": " points",
@@ -135,7 +138,11 @@
     "ai.museCut.points.hint": "One-time permanent points, flexible top-up when consumed within validity period",
     "ga.hint": "Overseas acceleration data package, flexible top-up when consumed within validity period",
     "ga.unit": "/10T/year",
-    "cdnTraffic.hint": "CDN traffic package, flexible top-up when consumed within validity period",
+    "ga.cdnOss": "CDN/OSS Global Public Network Acceleration",
+    "ga.cdnOss.hint": "Supports downloading and previewing all files, as well as uploading regular-sized files",
+    "ga.dedicatedLine": "GA Global Dedicated Line Acceleration",
+    "ga.dedicatedLine.hint": "Suitable for high requirements of cross-border collaboration, ensuring large file uploads overseas",
+    "cdnTraffic.hint": "Can be purchased with public urls, flexible top-up when consumed within validity period",
     "sso.unit": "/channel/year",
     "ai.AutoTagEngine.unit": "package",
     "ai.AutoTagEngine.unit.s": "s",
