--- a/src/app/i18n/locales/zh-CN/pricing-enterprise-features.json
+++ b/src/app/i18n/locales/zh-CN/pricing-enterprise-features.json
@@ -278,10 +278,20 @@
     "enterpriseSingleSignOn.3.name": "Teams SSO",
     "enterpriseSingleSignOn.3.detail": "通过 Teams 进行单点登录设置和身份验证",
     "globalAcceleration.title": "海外加速",
-    "globalAcceleration.0.name": "全球团队协作支持",
-    "globalAcceleration.0.detail": "确保海外团队成员能够正常访问系统，实现跨地区无障碍协作",
-    "globalAcceleration.1.name": "高性能网络服务",
-    "globalAcceleration.1.detail": "提供海外 CDN/OSS 加速流量包配额，保障全球用户的访问速度和稳定性",
+    "globalAcceleration.block.0": "CDN/OSS 全球公网加速",
+    "globalAcceleration.0.name": "全球节点覆盖",
+    "globalAcceleration.0.detail": "遍布全球的 CDN 节点网络，保障海外团队成员流畅访问系统，实现跨地区无障碍协作",
+    "globalAcceleration.1.name": "智能加速分工",
+    "globalAcceleration.1.detail": "自动承载文件下载、在线预览及常规大小文件上传，显著提升全球用户的访问速度与稳定性",
+    "globalAcceleration.2.name": "高性价比方案",
+    "globalAcceleration.2.detail": "提供海外 CDN/OSS 加速流量包，以更优成本实现全球高性能网络服务",
+    "globalAcceleration.block.1": "GA 全球专线加速",
+    "globalAcceleration.3.name": "跨境专用专线",
+    "globalAcceleration.3.detail": "基于全球加速专线网络，为跨国协作提供企业级稳定可靠的传输通道",
+    "globalAcceleration.4.name": "大文件上传保障",
+    "globalAcceleration.4.detail": "专为海外团队上传大文件优化，有效解决跨境网络不稳定问题",
+    "globalAcceleration.5.name": "组合配置方案",
+    "globalAcceleration.5.detail": "需在海外 CDN/OSS 加速包基础上叠加采购，构建\"CDN 读取加速 + GA 上传加速\"的完整全球传输解决方案",
     "customerService.title": "工单支持",
     "customerService.0.name": "工单支持",
     "customerService.0.detail": "专属工单系统，1-2 个工作日内响应",
