--- a/src/app/i18n/locales/zh-CN/quotation.json
+++ b/src/app/i18n/locales/zh-CN/quotation.json
@@ -106,12 +106,15 @@
     "expansion.storageSpace": "存储空间",
     "expansion.storageSpace.desc": "每月下载流量跟随存储容量",
     "expansion.aiPoints": "AI 点数",
-    "expansion.aiPoints.desc": "一次性永久 AI 点数包 10 万点/份，有效期至消耗完为止；AI 点数可用于自定义 AI 标签、智能解析和 AI 内容创作等",
+    "expansion.aiPoints.desc": "一次性永久 AI 点数包 10 万点/份；AI 点数可用于自定义 AI 标签、智能解析和 AI 内容创作等（有效期至消耗完为止）",
     "expansion.downloadData": "下载流量",
     "expansion.downloadData.desc": "下载流量包 1TB/份（有效期至消耗完为止）",
-    "expansion.GA": "海外加速流量",
-    "expansion.GA.desc": "CDN/OSS 加速流量包 1TB/份（有效期至消耗完为止）",
-    "expansion.CDN": "CDN 流量",
+    "expansion.GA": "海外加速流量扩充",
+    "expansion.GA.cdnOss": "CDN/OSS 全球公网加速流量包",
+    "expansion.GA.cdnOss.desc": "CDN/OSS 全球公网加速流量包 1TB/份（有效期至消耗完为止）",
+    "expansion.GA.dedicatedLine": "GA 全球专线上传加速流量包",
+    "expansion.GA.dedicatedLine.desc": "GA 全球专线上传加速流量包 1TB/份（消耗完为止）",
+    "expansion.CDN": "国内 CDN 流量",
     "expansion.CDN.desc": "CDN 流量包 1TB/份（有效期至消耗完为止）",
     "expansion.points": " 点",
     "form.required": "请填写必填信息",
@@ -120,7 +123,7 @@
     "module.aiAutoTagModule": "模块订阅费",
     "module.aiAutoTagPoints": "AI 点数包",
     "module.ga": "海外加速",
-    "module.cdnTraffic": "CDN 流量包",
+    "module.cdnTraffic": "国内 CDN 流量包",
     "module.smartFolders": "智能文件夹",
     "module.dat": "DAT 动态资产转换",
     "sso.feishu": "飞书",
@@ -135,7 +138,11 @@
     "ai.museCut.points.hint": "一次性永久点数，有效期内消耗完毕可灵活增购",
     "ga.hint": "海外加速流量包，有效期内消耗完毕可灵活增购",
     "ga.unit": "/10T/年",
-    "cdnTraffic.hint": "CDN 流量包，有效期内消耗完毕可灵活增购",
+    "ga.cdnOss": "CDN/OSS 全球公网加速",
+    "ga.cdnOss.hint": "支持所有文件的下载、预览,以及常规大小文件上传",
+    "ga.dedicatedLine": "GA 全球专线加速",
+    "ga.dedicatedLine.hint": "适合跨国协作高要求,保障海外大文件上传",
+    "cdnTraffic.hint": "可与公开链接搭配购买，有效期内消耗完毕可灵活增购",
     "sso.unit": "/渠道/年",
     "ai.AutoTagEngine.unit": "份",
     "ai.AutoTagEngine.unit.s": "",
